tests/errors/missing-record-field.wit
#cite: ::author:: (::year::) !!

@cite {author - Smith}
